<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pastelPink"
    tools:context="com.egci428.mobileproject.logInActivity">

    <TextView
        android:id="@+id/logIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logInTitle"
        android:textColor="@color/black"
        android:textSize="22sp"
        tools:layout_editor_absoluteX="113dp"
        tools:layout_editor_absoluteY="16dp" />

    <android.support.constraint.ConstraintLayout
        android:layout_marginTop="120dp"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="45dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <TextView
            android:id="@+id/username2"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginEnd="33dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/usernameInput"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:background="@drawable/border"
            android:hint="@string/username"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/password3"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username2"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/passwordInput"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:background="@drawable/border"
            android:hint="@string/password"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </android.support.constraint.ConstraintLayout>
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:background="@drawable/btnborder"
        android:text="@string/login"
        android:layout_marginTop="240dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="300dp" />
</android.support.constraint.ConstraintLayout>
