<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pastelPink"
    tools:context="com.egci428.mobileproject.SignupActivity">

    <TextView
        android:id="@+id/signupTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/signUpTitle"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <android.support.constraint.ConstraintLayout
        android:layout_marginTop="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <Spinner
            android:id="@+id/authorList"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:entries="@array/authors_arrays"
            android:prompt="@string/Authors_prompt"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/username_container"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/authorList"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >
            <TextView
                android:id="@+id/username"
                android:text="@string/username"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_chainStyle="spread_inside" />

            <EditText
                android:id="@+id/signupUsernameInput"
                android:hint="@string/username"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:background="@drawable/border"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="parent" />

        </android.support.constraint.ConstraintLayout>


        <android.support.constraint.ConstraintLayout
            android:id="@+id/password_container"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/username_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <TextView
                android:id="@+id/password"
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_chainStyle="spread_inside"  />

            <EditText
                android:id="@+id/signupPasswordInput"
                android:hint="@string/password"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:background="@drawable/border"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/name_container"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/password_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >
            <TextView
                android:id="@+id/name"
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_chainStyle="spread_inside"  />

            <EditText
                android:id="@+id/nameInput"
                android:hint="@string/name"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:background="@drawable/border"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/email_container"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/name_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >
            <TextView
                android:id="@+id/email"
                android:text="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_chainStyle="spread_inside"  />

            <EditText
                android:id="@+id/emailInput"
                android:hint="@string/email"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:background="@drawable/border"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginBottom="65dp"
        android:layout_marginEnd="148dp"
        android:background="@drawable/btnborder"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/join_the_family"
        android:layout_width="160dp"
        android:layout_height="200dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.007"
        app:srcCompat="@drawable/homepage_neko" />


</android.support.constraint.ConstraintLayout>
