<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pastelPink"
    tools:context="com.egci428.mobileproject.searchActivity">

    <TextView
        android:id="@+id/signupTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/search"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="22sp"/>


    <android.support.constraint.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/genreList"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:background="@drawable/border"
            android:entries="@array/Genre_arrays"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/genre"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/Genre"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genre"
            android:layout_marginTop="20dp" />
        
        <TextView
            android:id="@+id/titleInput"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:background="@drawable/border"
            android:hint="@string/title"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@+id/genreList"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent" />
        
        <TextView
            android:id="@+id/author"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:text="@string/author"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/authorInput"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:background="@drawable/border"
            android:hint="@string/author"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@+id/titleInput"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:background="@drawable/btnborder"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="200dp" />

    <ImageView
        android:id="@+id/cat_search_pic"
        android:layout_width="160dp"
        android:layout_height="190dp"
        app:srcCompat="@drawable/search_neko"
        app:layout_constraintTop_toBottomOf="@id/searchBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>
